Unreleased
==============================
 * Fixed a conflict between the "Delete" key shortcut and the standard delete action.
 * Modernized "New Folder" creation to use standard Qt APIs for local filesystems, removing legacy libfm fallbacks.
 * Fixed duplicate signal connections for main window actions which could cause double-triggering.

pcmanfm-qt-2.3.0 / 2025-11-05
==============================
 * Fixed removal of shortcut items with multi-screen setups on Wayland.
 * Prevented an imminent crash after removing a Wayland screen.
 * Added an option to disable file tooltips on desktop.
 * Fixed showing of ampersand in recent files menu.
 * Added Apply button to Preferences.
 * Silenced a Clang warning.
 * Fixed a crash on mount failure after closing a tab.
 * Disabled File Properties menu action with no file selection.
 * Set windows icon.
 * Code cleanup.
 * Gave parent windows to some dialogs.

pcmanfm-qt-2.2.0 / 2025-04-17
==============================
 * Better drag-and-drop on Desktop, without displacing neighboring items as far as possible.
 * Workaround for a case of wrong wallpaper size on Wayland.
 * Support custom options for terminals.
 * Better tab sizes, for preventing small tab texts from becoming elided as far as possible.
 * Prevented going up when Backspace is kept pressed inside the transient filter-bar.
 * Handled Wayland screens by using their names and stopped using "primary screen" on Wayland because Wayland doesn't have the concept of primary screen.
 * Allow string replacement in bulk renaming, and show the bulk rename dialog again on failure.
 * Added context menu items for opening the containing folder in search:///.
 * Removed an old X11 workaround under Wayland.
 * Replaced qMin,qMax,qBound and qRound with standard functions.
 * Set fallback icons to support more icon sets.
 * Added Ctrl+Shift+NUMBER as the shortcut for changing the view mode.

pcmanfm-qt-2.1.0 / 2024-11-05
==============================
 * Add 8 menu icons.